src/tests/testfiles/function-declarations/15.txt
Error at 2:5: Incompatible conversion returning 'int' from a function with result type 'const int * * * * * const * * * * * const *'
return 0;
^
